# agari

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASE_NOTES_v0.8.0.md  next_steps3.md
.github/workflows/: deploy-web.yml
agari_validator/: RULESET_DIFFERENCES.md  agari_validator.py  explore_mjson.py  main.py  pyproject.toml
crates/agari-core/: Cargo.toml
crates/agari-core/src/: main.rs  shanten.rs
crates/agari-python/: Cargo.toml  README.md  agari_core.pyi  pyproject.toml  pyrightconfig.json  test_bindings.py
crates/agari-python/src/: lib.rs
crates/agari-wasm/: Cargo.toml
crates/agari-wasm/src/: lib.rs
src/: display.rs  main.rs  scoring.rs  shanten.rs
web/: tsconfig.json  vite.config.ts
web/src/: App.svelte  app.css
web/src/lib/: agari.ts
web/src/lib/assets/tiles/: LICENSE.md
web/src/lib/components/: ContextOptions.svelte  DoraPicker.svelte  LanguageSwitcher.svelte  ScoreResult.svelte  Tile.svelte
web/src/lib/i18n/: en.ts  index.ts  ja.ts  types.ts
web/src/lib/wasm/: agari_wasm_bg.wasm  package.json
