[workspace]
members = ["crates/agari-core", "crates/agari-wasm"]
resolver = "2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[profile.release]
lto = "thin"
opt-level = "z"

[workspace.package]
version = "0.17.0"
edition = "2024"
repository = "https://github.com/sullenb/agari"
homepage = "https://github.com/sullenb/agari"
license = "MIT"
